# battousai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
battousai/: __init__.py  agent.py  approval.py  capabilities.py  contracts.py  drift.py  evolution.py  federation.py  filesystem.py  hal.py  integrity.py  ipc.py  ipc_signing.py  isolation.py  kernel.py  llm.py  logger.py  main.py  mcp_client.py  mcp_server.py  memory.py  network.py  persistence.py  providers.py  real_fs.py  sandbox.py  scheduler.py  schemas.py  supervisor.py  tools.py  tools_extended.py
docs/: changelog.md  comparison.md  contributing.md  index.md  launch-strategy.md  owasp-alignment.md
docs/advanced/: evolution.md  federation.md  hal.md  networking.md
docs/agents/: api.md  custom.md  llm.md  supervision.md
docs/architecture/: filesystem.md  ipc.md  kernel.md  memory.md  overview.md  scheduler.md
docs/getting-started/: demo.md  installation.md  quickstart.md
docs/security/: capabilities.md  contracts.md  schemas.md
docs/tools/: builtin.md  extended.md
examples/: demo.py  quickstart.py  security_benchmark.py  security_demo.py
tests/: test_agent.py  test_approval.py  test_capabilities.py  test_contracts.py  test_drift.py  test_evolution.py  test_federation.py  test_filesystem.py  test_hal.py  test_integration.py  test_integrity.py  test_ipc.py  test_ipc_signing.py  test_isolation.py  test_kernel.py  test_llm.py  test_logger.py  test_mcp_client.py  test_mcp_server.py  test_memory.py  test_network.py  test_persistence.py  test_providers.py  test_real_fs.py  test_sandbox.py  test_scheduler.py  test_schemas.py  test_supervisor.py  test_tools.py  test_tools_extended.py
