[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battousai"
version = "0.2.0"
description = "Autonomous Intelligence Operating System — an OS built exclusively for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Battousai Project"}
]
keywords = ["ai", "agents", "operating-system", "multi-agent", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Operating System Kernels",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/DPL1979/battousai"
Documentation = "https://dpl1979.github.io/battousai"
Repository = "https://github.com/DPL1979/battousai"
Issues = "https://github.com/DPL1979/battousai/issues"

[project.scripts]
battousai = "battousai.main:main"

[tool.setuptools.packages.find]
include = ["battousai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
