[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battousai"
version = "0.3.0"
description = "A lightweight Python runtime for sandboxed AI agents — capability-based security, fault-tolerant supervision, and memory isolation with zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "DPL1979"}
]
keywords = ["ai", "agents", "security", "sandbox", "capability", "multi-agent", "supervision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage   = "https://github.com/DPL1979/battousai"
Repository = "https://github.com/DPL1979/battousai"

[project.scripts]
battousai = "battousai.main:main"

[tool.setuptools.packages.find]
include = ["battousai*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
