[metadata]
name = battousai
version = 0.3.0
description = A lightweight Python runtime for sandboxed AI agents — capability-based security, fault-tolerant supervision, and memory isolation with zero dependencies.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = DPL1979
url = https://github.com/DPL1979/battousai
python_requires = >=3.10
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
python_requires = >=3.10

[options.packages.find]
include = battousai*

[options.entry_points]
console_scripts =
    battousai = battousai.main:main
